--- a/dabang_clone/src/register_components/AdditionalInfo.css
+++ b/dabang_clone/src/register_components/AdditionalInfo.css
@@ -13,7 +13,7 @@
 }
 
 #additionalInfo table th {
-  min-width: 150px;
+  width: 150px;
   color: rgb(34, 34, 34);
   font-size: 15px;
   font-weight: 500;
