--- a/dabang_clone/src/register_components/ImageUpload.css
+++ b/dabang_clone/src/register_components/ImageUpload.css
@@ -141,6 +141,40 @@
   margin-left: 12px;
 }
 
+#imageUpload .image-upload {
+  width: 120px !important;
+  height: 40px !important;
+  font-size: 100px;
+  text-align: right;
+  min-width: 0 !important;
+  outline: none;
+  background: rgb(0, 0, 0);
+  cursor: inherit;
+  display: block !important;
+  border-radius: 50% !important;
+  cursor: pointer;
+  position: absolute;
+  margin: 0 !important;
+  z-index: -1;
+}
+
+#imageUpload .image-upload-wrapper {
+  position: inherit;
+  height: 40px;
+  color: rgb(255, 255, 255);
+  font-size: 14px;
+  font-weight: 500;
+  background-color: rgb(35, 45, 74);
+  padding: 0px 20px;
+  border: 0px;
+  border-radius: 3px;
+  width: 120px;
+  line-height: 40px;
+  display: block;
+  text-align: center;
+  cursor: pointer;
+}
+
 #imageUpload menu,
 #imageUpload ol,
 #imageUpload ul {
